--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     </div>
     
     <form id="login-form">
-      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Email">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="username">
       <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-      <input type="submit" value="Login" onclick="signInWithEmail()">
+      <input type="submit" value="Login" onclick="signInWithUsrname()">
+      <button type="submit" value="Sign up" onclick="gotoSignUp()">
     </form>
   
   </main>
